# finagent_anthropic

./: .env.example  .gitignore  ARCHITECTURE.md  INSTALL.md  pyproject.toml  requirements.txt
.claude/: launch.json
good_practices/: backtest_integrity.md  covariance_estimation.md  statistical_testing.md
lakshya_qai/: __init__.py  main.py  orchestrator.py  trace_viewer.py  tracing.py
lakshya_qai/agents/: bias_audit.py  classifier.py  coder.py  dev_agents.py  extractor.py  human_gate.py  performance_monitor.py  planner.py  prompts.py  tester.py  trading.py
lakshya_qai/config/: __init__.py  settings.py
lakshya_qai/extraction/: __init__.py  docling_parser.py  grobid_parser.py  nougat_parser.py  pipeline.py
lakshya_qai/mcps/: code_rag_parser.py  code_rag_vector_store.py  docstring_generator.py
lakshya_qai/mcps/data_library/: server.py
lakshya_qai/mcps/data_library/sources/findata/: bloomberg.py  equity_prices.py  file_reader.py  sp500_composition.py
lakshya_qai/mcps/knowledge_base/: server.py
lakshya_qai/mcps/tools_library/: server.py
lakshya_qai/mcps/tools_library/tools/mlfinlab/: __init__.py
lakshya_qai/mcps/tools_library/tools/mlfinlab/backtest_statistics/: backtests.py  statistics.py
lakshya_qai/mcps/tools_library/tools/mlfinlab/bet_sizing/: bet_sizing.py  ch10_snippets.py  ef3m.py
lakshya_qai/mcps/tools_library/tools/mlfinlab/clustering/: feature_clusters.py  hierarchical_clustering.py  onc.py
lakshya_qai/mcps/tools_library/tools/mlfinlab/codependence/: codependence_matrix.py  correlation.py  gnpr_distance.py  information.py  optimal_transport.py
lakshya_qai/mcps/tools_library/tools/mlfinlab/cross_validation/: combinatorial.py  cross_validation.py
lakshya_qai/mcps/tools_library/tools/mlfinlab/data_generation/: hcbm.py  (+5 more)
lakshya_qai/signals/: __init__.py  api.py  base.py
tests/: test_smoke.py
(+50 files in other folders)
